@@ -1,4 +1,8 @@
 
+2009-04-11  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Removing libtool files
+
 2009-04-10  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Updated for i686: 1.6.1
